--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jo\u00e3o Vitor\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/ji/.netbeans/8.2/build.properties
