--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/PartyBudget.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.5.10.jar=Bibliotecas Utilizadas/itextpdf-5.5.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JCalendar.classpath}
+    ${libs.JCalendar.classpath}:\
+    ${file.reference.itextpdf-5.5.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
